cambio de mensaje

--- a/index.html
+++ b/index.html
@@ -114,10 +114,8 @@
 <body>
     <div class="container">
         <h1>¡Felicidades, mi amor!</h1>
-        <p>Hoy es un día para celebrar tu increíble logro. Has trabajado tan duro, con tanta dedicación y pasión, y ver cómo alcanzas esta meta me llena de un orgullo inmenso.</p>
-        <p>Sabía que lo lograrías. Tu inteligencia, tu perseverancia y tu espíritu incansable son una inspiración para todos los que te rodeamos, y especialmente para mí.</p>
-        <p>Este es solo el comienzo de cosas aún más grandes y maravillosas que sé que conseguirás. Estoy emocionado/a por cada paso que des y por cada éxito que celebremos juntos.</p>
-        <p>Gracias por ser tú y por inspirarme cada día. ¡Te amo con todo mi corazón!</p>
+        <p>Hoy celebramos tu gran logro. Estoy muy orgulloso de ti y de todo lo que has conseguido.</p>
+        <p>Tu esfuerzo y dedicación me inspiran cada día. Te amo muchísimo y siempre estaré a tu lado.</p>
         <p class="signature">Con todo mi amor, <br> [Tu Nombre]</p>
     </div>
 
