--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <p>Sabía que lo lograrías. Tu inteligencia, tu perseverancia y tu espíritu incansable son una inspiración para todos los que te rodeamos, y especialmente para mí.</p>
         <p>Este es solo el comienzo de cosas aún más grandes y maravillosas que sé que conseguirás. Estoy emocionado/a por cada paso que des y por cada éxito que celebremos juntos.</p>
         <p>Gracias por ser tú y por inspirarme cada día. ¡Te amo con todo mi corazón!</p>
-        <p class="signature">Con todo mi amor, <br> [Tu Nombre]</p>
+        <p class="signature">Con todo mi amor, <br> David</p>
     </div>
 
     <script>
