--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
 
         <p>¡Te amo con todo mi corazón!</p>
-        <p class="signature">Con todo mi amor, <br> [Tu Nombre]</p>
+        <p class="signature">Con todo mi amor, <br> David </p>
     </div>
 
     <script>
