--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <body>
     <div class="container">
         <h1>¡Felicidades, mi amor!</h1>
-        <p>Hoy celebramos tu gran logro. Has trabajado muchísimo y estoy inmensamente orgulloso/a de ti.</p>
+        <p>Hoy celebramos tu gran logro el haberte graduado y ser ahora una profesional. Has trabajado muchísimo y estoy inmensamente orgulloso/a de ti.</p>
         <p>Este es el inicio de cosas maravillosas. ¡Siempre te apoyaré en cada paso!</p>
 
         <div class="image-container">
