--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
 
         <p>¡Te amo con todo mi corazón!</p>
-        <p class="signature">Con todo mi amor, <br> david</p>
+        <p class="signature">Con todo mi amor, <br> David</p>
     </div>
 
     <script>
